@@ -1,3 +1,12 @@
+2002-07-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* benchmark-guile.in:  Copied from check-guile.in and adapted for
+	use with benchmarks.
+
+	* Makefile.am:  Recurse into the benchmark-suite subdir.
+
+	* configure.in:  Added benchmarking files.
+
 2002-07-12  Gary Houston  <ghouston@arglist.com>
 
 	* configure.in: check dynamic linking before modules.  Add dynl.c
